--- a/package.json
+++ b/package.json
@@ -6,20 +6,63 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "tsc": "tsc -p ./",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
+    "test": "jest --watch",
+    "test:ci": "jest --ci",
+    "test-storybook": "test-storybook",
+    "chromatic": "npx chromatic --project-token=9f354c9e287a",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.4.0",
+    "@headlessui/react": "^1.7.14",
+    "@hookform/resolvers": "^3.1.0",
+    "@prisma/client": "^4.13.0",
+    "@react-hook/window-size": "^3.1.1",
+    "@storybook/addon-essentials": "^7.0.2",
+    "@storybook/addon-interactions": "^7.0.2",
+    "@storybook/addon-links": "^7.0.2",
+    "@storybook/addons": "^7.0.2",
+    "@storybook/blocks": "^7.0.2",
+    "@storybook/nextjs": "^7.0.6",
+    "@storybook/react": "^7.0.6",
+    "@storybook/testing-library": "^0.1.0",
+    "@supabase/supabase-js": "^2.21.0",
     "@types/node": "18.16.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
+    "prisma": "^4.13.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "yarn": "^1.22.19",
+    "yup": "^1.1.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.21.4",
+    "@storybook/test-runner": "^0.10.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.0",
+    "autoprefixer": "^10.4.14",
+    "chromatic": "^6.17.3",
+    "eslint-plugin-storybook": "^0.6.11",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "postcss": "^8.4.21",
+    "storybook": "^7.0.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1"
   }
 }
