--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.4.0",
     "@headlessui/react": "^1.7.14",
+    "@headlessui/tailwindcss": "^0.1.3",
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.13.0",
     "@react-hook/window-size": "^3.1.1",
