--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
     "chromatic": "chromatic --project-token=CHROMATIC_PROJECT_TOKEN",
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
+  "prisma": {
+    "seed": "ts-node --transpile-only ./prisma/seed.ts"
+  },
   "dependencies": {
+    "@apollo/client": "^3.7.13",
     "@auth0/nextjs-auth0": "^2.4.0",
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
     "@hookform/resolvers": "^3.1.0",
+    "@pothos/core": "^3.30.0",
+    "@pothos/plugin-prisma": "^3.49.0",
+    "@pothos/plugin-relay": "^3.43.0",
     "@prisma/client": "^4.13.0",
     "@react-hook/window-size": "^3.1.1",
     "@storybook/addon-essentials": "^7.0.7",
@@ -40,6 +47,9 @@
     "date-fns": "^2.30.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "graphql": "^16.6.0",
+    "graphql-scalars": "^1.21.3",
+    "graphql-yoga": "^3.9.1",
     "next": "13.3.1",
     "postcss": "8.4.23",
     "prisma": "^4.13.0",
