--- a/.github/workflows/component-tests.yml
+++ b/.github/workflows/component-tests.yml
@@ -34,5 +34,7 @@ jobs:
           node-version: '16.x'
       - name: Install dependencies
         run: yarn
+      - name: Generate Prisma Client and Pothos types
+        run: npx prisma generate
       - name: Compile Typescript
         run: yarn tsc
