--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@auth0/nextjs-auth0": "^2.4.0",
     "@headlessui/react": "^1.7.14",
     "@headlessui/tailwindcss": "^0.1.3",
+    "@heroicons/react": "^2.0.17",
     "@hookform/resolvers": "^3.1.0",
     "@pothos/core": "^3.30.0",
     "@pothos/plugin-prisma": "^3.49.0",
