--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "postcss": "8.4.23",
     "prisma": "^4.13.0",
     "react": "18.2.0",
+    "react-datepicker": "^4.11.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-hot-toast": "^2.4.1",
@@ -70,6 +71,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@types/jest": "^29.5.0",
+    "@types/react-datepicker": "^4.11.2",
     "autoprefixer": "^10.4.14",
     "chromatic": "^6.17.3",
     "eslint-plugin-storybook": "^0.6.11",
