--- a/package.json
+++ b/package.json
@@ -47,11 +47,11 @@
     "classnames": "^2.3.2",
     "date-fns": "^2.30.0",
     "eslint": "8.39.0",
-    "eslint-config-next": "13.3.1",
+    "eslint-config-next": "latest",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.21.3",
     "graphql-yoga": "^3.9.1",
-    "next": "13.3.1",
+    "next": "13.4.1",
     "postcss": "8.4.23",
     "prisma": "^4.13.0",
     "react": "18.2.0",
