--- a/.github/workflows/ui-tests.yml
+++ b/.github/workflows/ui-tests.yml
@@ -3,6 +3,24 @@ name: 'UI Tests'
 on: push
 
 jobs:
+  # Install and cache yarn dependencies
+    install-cache:
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout Commit
+          uses: actions/checkout@v2
+        - name: Cache yarn dependencies
+          uses: actions/cache@v2
+          id: yarn-cache
+          with:
+            path:
+              node_modules
+            key: ${{ runner.os }}-yarn-v1-${{ hashFiles('**/yarn.lock') }}
+            restore-keys: |
+              ${{ runner.os }}-yarn-v1
+        - name: Install dependencies if cache invalid
+          if: steps.yarn-cache.outputs.cache-hit != 'true'
+          run: yarn
   # Run interaction and accessibility tests
   interaction-and-accessibility:
     runs-on: ubuntu-latest
